Fix mobile overflow

--- a/sass/base/elements/_body.scss
+++ b/sass/base/elements/_body.scss
@@ -3,9 +3,12 @@
 body {
   background: $color__background-body; // Fallback for when there is no custom background color defined.
   overflow-x: hidden;
+  padding: 0 1rem;
 
   @media (min-width: $breakpoint_small) {
-  }
-  @media (min-width: $breakpoint_medium) {
-  }
+    padding: 0 4rem;
+}
+@media (min-width: $breakpoint_medium) {
+    padding: 0 8rem;
+}
 }
